fix: register api
